# cppcoro

./: .gitignore  CMakeLists.txt
examples/: CMakeLists.txt  main.cpp
include/cppcoro/: file_read_operation.hpp
